--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "@eslint/js": "^9.26.0",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9.26.0",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^15.3.2",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prettier": "^5.4.0",
     "globals": "^16.1.0",
