--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --config=eslint.config.mjs"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.8.4",
